Fixed navbar and header sttlisation on small screen.

--- a/styles/components/buttons.styl
+++ b/styles/components/buttons.styl
@@ -12,3 +12,6 @@
   &:hover
     background lighten(@background, 30%)
     transition .5s ease-in-out
+  @media (max-width 968px)
+    padding .5rem 1rem
+    font-size 1.7rem
